created chart rooms for specific room of users.Also Implemented template for sidebar to display room and their specific users.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>LetsChat App</title>
+        <title>LetzChat</title>
         <link rel="icon" href="./img/favicon.png">
         <link rel="stylesheet" href="./css/styles.min.css">
     </head>
